# yolo-track-raspberry-pi-hailo

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: f980aa9fb471_create_detections_and_video_files_tables.py
common/: resize_with_padding.py  test_resize_with_padding.py
scripts/: capture_photo.py  test_cam.py  test_db.py  test_gstreamer.py  test_hailo_temperature.py  test_picam.py  test_write_video.py
src/: main.py
src/common/: __init__.py  tracker.py
src/database/: __init__.py  database.py  mixins.py  model_detection.py  model_video_file.py
